--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@nivo/bar": "^0.85.1",
     "@nivo/core": "^0.85.1",
     "@nivo/line": "^0.85.1",
-    "@reduxjs/toolkit": "^2.2.1",
+    "@tanstack/react-query": "^5.28.9",
+    "@tanstack/react-query-devtools": "^5.28.10",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
@@ -22,8 +23,6 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.0",
-    "redux": "^5.0.1",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
