Feat : 카카오 지도 API 연동. 로직 고민

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
     "baseUrl": "./src",
     "paths": {
       "@src/*": ["*"]
-    }
+    },
+    "types": ["kakao.maps.d.ts"]
   },
   "references": [{ "path": "./tsconfig.node.json" }]
 }
