--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
+    "react-kakao-maps-sdk": "^1.1.26",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
