--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nivo/bar": "^0.85.1",
     "@nivo/core": "^0.85.1",
     "@nivo/line": "^0.85.1",
+    "@reduxjs/toolkit": "^2.2.3",
     "@tanstack/react-query": "^5.28.9",
     "@tanstack/react-query-devtools": "^5.28.10",
     "axios": "^1.6.7",
@@ -24,6 +25,8 @@
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-kakao-maps-sdk": "^1.1.26",
+    "react-redux": "^9.1.1",
+    "redux": "^5.0.1",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
