--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-kakao-maps-sdk": "^1.1.26",
     "react-redux": "^9.1.1",
+    "react-router-dom": "^6.23.1",
     "redux": "^5.0.1",
     "styled-components": "^6.1.8"
   },
