--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "preview": "vite preview",
     "test": "jest",
     "prettier": "prettier --write --config ./.prettierrc ./src"
-
   },
   "dependencies": {
     "@nivo/bar": "^0.85.1",
@@ -19,6 +18,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "@tanstack/react-query": "^5.28.9",
     "@tanstack/react-query-devtools": "^5.28.10",
+    "@vercel/analytics": "^1.3.1",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
