--- a/package.json
+++ b/package.json
@@ -36,10 +36,15 @@
     "@types/jest": "^29.5.12",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
+    "@typescript-eslint/eslint-plugin": "^7.14.1",
+    "@typescript-eslint/parser": "^7.14.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "globals": "^15.6.0",
     "jest": "^29.7.0",
-    "prettier": "3.3.2",
+    "prettier": "^3.3.2",
     "ts-jest": "^29.1.2",
     "typescript": "^5.2.2",
     "vite": "^5.1.6"
