--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,10 @@
 {
-  "singleQuote": true,
-  "jsxSingleQuote": true,
+  "singleQuote": true, 
+  "jsxSingleQuote": true, 
   "semi": true,
   "tabWidth": 2,
   "trailingComma": "all",
   "printWidth": 120,
   "parser": "typescript",
-  "arrowParens": "avoid",
+  "arrowParens": "avoid"
 }
