--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "date-fns": "^3.6.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
+    "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.2.0",
     "react-kakao-maps-sdk": "^1.1.26",
     "react-redux": "^9.1.1",
