--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-bootstrap": "^2.10.1",
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-kakao-maps-sdk": "^1.1.26",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.23.1",
