chore : tsconfig.node 수정

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,7 +6,7 @@
     "moduleResolution": "bundler", // Required for Vite
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    // "forceConsistentCasingInFileNames": true,
+    "forceConsistentCasingInFileNames": true,
   },
   "include": ["vite.config.ts"]
 }
