--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,10 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
-*.local
-.env
 
+*.local
+*.production
+.env
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
