--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
     "react-kakao-maps-sdk": "^1.1.26",
+    "react-lottie": "^1.2.4",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.23.1",
     "redux": "^5.0.1",
