--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
+    "firebase": "^10.13.1",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
