--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,8 @@
 {
+"routes": [
+    { "handle": "filesystem" },
+    { "src": "/.*", "dest": "/index.html" }
+    ],
 "rewrites": [
     {"source": "/api/naver/oauth/:path*", 
     "destination": "https://nid.naver.com/oauth2.0/:path*"},
