fix : vercel.json 재수정. / 위치 수정

--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,13 @@
 {
-"routes": [
-    { "handle": "filesystem" },
-    { "src": "/.*", "dest": "/index.html" }
-    ],
-"rewrites": [
-    {"source": "/api/naver/oauth/:path*", 
-    "destination": "https://nid.naver.com/oauth2.0/:path*"},
-    {"source": "/api/naver/info/:path*", 
-    "destination": "https://openapi.naver.com/v1/:path*"},
-
-    {"source": "/api/kakao/oauth/:path*", 
-    "destination": "https://kauth.kakao.com/oauth/:path*"},
-    {"source": "/api/kakao/info/:path*", 
-    "destination": "https://kapi.kakao.com/v2/:path*"}
-]
-}
+    "rewrites": [
+      { "source": "/api/naver/oauth/:path*", 
+        "destination": "https://nid.naver.com/oauth2.0/:path*" },
+      { "source": "/api/naver/info/:path*", 
+        "destination": "https://openapi.naver.com/v1/:path*" },
+      { "source": "/api/kakao/oauth/:path*", 
+        "destination": "https://kauth.kakao.com/oauth/:path*" },
+      { "source": "/api/kakao/info/:path*", 
+        "destination": "https://kapi.kakao.com/v2/:path*" },
+      { "source": "/(.*)", "destination": "/index.html" } 
+    ]
+  }
