--- a/package.json
+++ b/package.json
@@ -15,43 +15,44 @@
     "@nivo/bar": "^0.87.0",
     "@nivo/core": "^0.87.0",
     "@nivo/line": "^0.87.0",
-    "@reduxjs/toolkit": "^2.2.3",
-    "@tanstack/react-query": "^5.28.9",
-    "@tanstack/react-query-devtools": "^5.28.10",
+    "@reduxjs/toolkit": "^2.3.0",
+    "@tanstack/react-query": "^5.59.16",
+    "@tanstack/react-query-devtools": "^5.59.16",
     "@types/react-lottie": "^1.2.10",
-    "@vercel/analytics": "^1.3.1",
-    "axios": "^1.6.7",
+    "@vercel/analytics": "^1.3.2",
+    "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
-    "date-fns": "^3.6.0",
-    "firebase": "^10.13.1",
+    "date-fns": "^4.1.0",
+    "firebase": "^11.0.1",
     "gsap": "^3.12.5",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.10.1",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
     "react-bootstrap-icons": "^1.11.4",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
-    "react-kakao-maps-sdk": "^1.1.26",
+    "react-kakao-maps-sdk": "^1.1.27",
     "react-lottie": "^1.2.4",
-    "react-redux": "^9.1.1",
-    "react-router-dom": "^6.23.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.27.0",
     "redux": "^5.0.1",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.13",
+    "ultra-exact-ncst": "^1.1.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
-    "@types/jest": "^29.5.12",
-    "@types/react-dom": "^18.2.21",
-    "@typescript-eslint/eslint-plugin": "^7.14.1",
-    "@typescript-eslint/parser": "^7.14.1",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^8.56.0",
+    "@types/jest": "^29.5.14",
+    "@types/react-dom": "^18.3.1",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.11.0",
+    "@vitejs/plugin-react-swc": "^3.7.1",
+    "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "globals": "^15.6.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.11.0",
     "jest": "^29.7.0",
-    "prettier": "^3.3.2",
-    "ts-jest": "^29.1.2",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.6"
+    "prettier": "^3.3.3",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.6.3",
+    "vite": "^5.4.10"
   }
 }
