--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
+    "react-joyride": "^2.9.3",
     "react-kakao-maps-sdk": "^1.1.27",
     "react-lottie": "^1.2.4",
     "react-redux": "^9.1.2",
